Add irij build command, JDK 25, HTTP error logging
- irij build: package app into self-contained JAR (runtime + deps + resources/)
- Bundled JAR runs standalone: java -jar app.jar (no git, no deps.irj at runtime)
- ModuleRegistry: bundled mode loads from __irij_deps/ and __irij_app/ on classpath
- Static file serving: checks __irij_resources/ in bundled mode
- DependencyResolver: check project-local .irij/deps/ before ~/.irij/deps/
- JDK toolchain 21 → 25
- HTTP 500 errors now logged to stderr with stack trace
- Better error for negative args: hint to use f (-7) parens

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>