@@ -12,6 +12,13 @@
 - `--no-spec-lint` is for human emergency development ONLY. Never use it as a workaround for missing annotations. Fix the annotations instead.
 - When creating or modifying any `pub fn`, always add or maintain its spec annotation
 
+## Build & Deploy
+- `irij build` — package app into self-contained JAR (bundles runtime + deps + resources/)
+- `irij build server.irj` — build with explicit entry point
+- `irij build -o out.jar` — custom output path
+- Bundled JAR runs with: `java --enable-native-access=ALL-UNNAMED -jar app.jar`
+- Static files go in `resources/` directory (bundled under `__irij_resources/` in JAR)
+
 ## Spec Reference
 - `docs/irij-lang-spec.org` is the source of truth
 - Always update `TODO.md` when steps are implemented
